- remove unnecessary code NAV - give <nav> element the corrent height == 99px BANNER - give the background image the correct height == 550px - vertically center the text in front of the image >>FIX!!  *Issue: banner requires filter to make the text content easily readable  across all screen sizes/ devices  #Solution: used 2 linear background-gradients to accentuate the text  content in front of the banner image, for 2 breakpoints

--- a/css/application.css
+++ b/css/application.css
@@ -407,6 +407,7 @@ header div.inner div.container div.search-form-wrapper--mobile form.search-form 
 
 nav {
   background-color: #333645;
+  height: 99px;
 }
 @media (max-width: 992px) {
   nav {
@@ -726,38 +727,44 @@ nav div.container div a:nth-child(7) div span:last-child {
 }
 
 div.banner-container div.image-container {
+  height: 550px !important;
   background-image: url("../assets/images/banners/why--choose--us.png"), url("../assets/images/banners/why--choose--us.jpg");
   background-attachment: local;
   background-size: cover;
   background-position: center;
-  background-blend-mode: hard-light;
-  height: 608.6px !important;
+  background-color: rgb(94, 91, 91);
 }
-div.banner-container div.image-container div.container div.why-choose-us {
-  height: 360.6px;
+div.banner-container div.image-container div.why-choose-us {
+  background-image: linear-gradient(to right, #1b1c24, transparent);
+  height: 100%;
   margin: auto;
-  padding: 5% 0;
+  padding: 0;
   text-align: center;
   color: white;
-  display: flex;
-  flex-direction: column;
-  justify-self: center;
 }
-div.banner-container div.image-container div.container div.why-choose-us h1 {
+@media (min-width: 992px) {
+  div.banner-container div.image-container div.why-choose-us {
+    background-image: linear-gradient(to right, black, transparent);
+  }
+}
+div.banner-container div.image-container div.why-choose-us div.wrapper {
+  height: 360.6px;
+  padding-top: 20%;
+}
+div.banner-container div.image-container div.why-choose-us div.wrapper h1 {
   font-size: 2.5rem;
   line-height: 3rem;
   margin: 0 0 1.25rem;
   color: #fff;
   font-weight: 600;
 }
-div.banner-container div.image-container div.container div.why-choose-us p {
+div.banner-container div.image-container div.why-choose-us div.wrapper p {
   margin-bottom: 0.375rem;
   font-size: 1.25rem;
   line-height: 1.75rem;
   font-weight: 600;
 }
-div.banner-container div.image-container div.container div.why-choose-us a {
-  align-self: center;
+div.banner-container div.image-container div.why-choose-us div.wrapper a {
   margin-top: 1.938rem;
   margin-bottom: 1.125rem;
   color: #fff;
@@ -773,30 +780,25 @@ div.banner-container div.image-container div.container div.why-choose-us a {
   display: inline-block;
   margin-bottom: 0;
   font-weight: 400;
-  text-align: center;
-  vertical-align: middle;
-  background-image: none;
   border: 1px solid transparent;
-  user-select: none;
-  text-decoration: none;
 }
-div.banner-container div.image-container div.container div.why-choose-us a:hover {
+div.banner-container div.image-container div.why-choose-us div.wrapper a:hover {
   background-color: #7e57a0;
   border-color: #735093;
 }
 @media (min-width: 992px) {
-  div.banner-container div.image-container div.container div.why-choose-us {
+  div.banner-container div.image-container div.why-choose-us {
     text-align: left;
   }
-  div.banner-container div.image-container div.container div.why-choose-us h1 {
+  div.banner-container div.image-container div.why-choose-us h1 {
     font-size: 4rem;
     line-height: 5rem;
   }
-  div.banner-container div.image-container div.container div.why-choose-us p {
+  div.banner-container div.image-container div.why-choose-us p {
     font-size: 1.625rem;
     line-height: 2.5rem;
   }
-  div.banner-container div.image-container div.container div.why-choose-us a {
+  div.banner-container div.image-container div.why-choose-us a {
     align-self: flex-start;
   }
 }
