--- a/scss/main-sections/_nav.scss
+++ b/scss/main-sections/_nav.scss
@@ -1,5 +1,6 @@
 nav{
     background-color: #333645;
+    height: 99px;
     @media (max-width: 992px){
         display: none;
     }
